--- a/SonarVisualizer/src/app.css
+++ b/SonarVisualizer/src/app.css
@@ -1,3 +1,4 @@
+
 body {
   margin: 0;
   display: flex;
@@ -12,4 +13,13 @@ body {
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+}
+
+p{
+  font-family: 'Gloock', serif;
+  font-family: 'IBM Plex Sans', sans-serif;
+  font-weight: bold;
+  color: black;
+  font-size: 20px;
+  margin-left: 10px;
 }
