Darkmode switch and first version of dark mode

--- a/SonarVisualizer/src/app.css
+++ b/SonarVisualizer/src/app.css
@@ -19,3 +19,17 @@ p{
   margin-left: 10px;
 }
 
+.dark-mode {
+  background-color: #2a2a2a;
+}
+
+.dark-mode p{
+  color: white;
+}
+
+.dark-mode span p {
+  color: white;
+}
+
+
+
