Create header div for logo and dark-mode switch
Create header div for logo and dark-mode switch, delete unnecessary code, fix layout issues related to logo and added margin to the screen.

--- a/SonarVisualizer/src/app.css
+++ b/SonarVisualizer/src/app.css
@@ -36,9 +36,11 @@ p{
 }
 
 .dark-mode .kiwave-dark{
-  width: 110px !important;
+  display: block !important;
+  width: 110px ;
   height: auto;
   padding-top: 10px;
+  padding-left: 15px;
 }
 
 .dark-mode .kiwave-light{
