--- a/SonarVisualizer/src/app.css
+++ b/SonarVisualizer/src/app.css
@@ -49,5 +49,10 @@ p{
   filter: drop-shadow(0px 0px 20px #1a1919) !important;
 }
 
+.dark-mode .tooltip::after {
+  background-color: #3b3b3b !important;
+  color: white !important;
+}
+
 
 
