#68 Deployment on VPS
Janos and I changed the YML file, so that it has stages and it will deploy the GUI on his VPS.

--- a/SonarVisualizer/src/app.css
+++ b/SonarVisualizer/src/app.css
@@ -54,7 +54,7 @@ p{
 .dark-mode .tooltip::after {
   background-color: #4b4b4b !important;
   color: white !important;
-
+}
 .dark-mode .selected{
  background-color: #3b3b3b !important;
 }
